# C-_CMake_SDC

./: .gitignore
CMake/HelloWorld/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
CMake/simple_cmake_example/: CMakeLists.txt
CMake/simple_cmake_example/example/: CMakeLists.txt  main.cpp
CMake/simple_cmake_example/include/: CMakeLists.txt
CMake/simple_cmake_example/include/simplecmake/: printhello.h
CMake/simple_cmake_example/src/: CMakeLists.txt  printhello.cpp
Cpp_OOPs/Abstraction/: CMakeLists.txt  main.cpp
Cpp_OOPs/Abstraction/include/: Circle.h  Rectangle.h  Shape.h
Cpp_OOPs/Abstraction/src/: CMakeLists.txt  Circle.cpp  Rectangle.cpp
Cpp_OOPs/ConstructorDestructor/: CMakeLists.txt  main.cpp
Cpp_OOPs/DeepCopy/: CMakeLists.txt  main.cpp
Cpp_OOPs/Encapsulation/: CMakeLists.txt  main.cpp
Cpp_OOPs/Encapsulation/include/: BankAccount.h
Cpp_OOPs/Encapsulation/src/: BankAccount.cpp  CMakeLists.txt
Cpp_OOPs/Inheritance/: CMakeLists.txt  main.cpp
Cpp_OOPs/Inheritance/include/: Animal.h  Dog.h
Cpp_OOPs/Inheritance/src/: Animal.cpp  CMakeLists.txt  Dog.cpp
Cpp_OOPs/Inheritancee/: CMakeLists.txt  main.cpp
Cpp_OOPs/Namespace/: CMakeLists.txt  main.cpp
Cpp_OOPs/Polymorphism/RuntimePolymorphism/: CMakeLists.txt  main.cpp
Cpp_OOPs/Polymorphism/RuntimePolymorphism/include/: Bike.h  Car.h  Vehicle.h
Cpp_OOPs/Polymorphism/RuntimePolymorphism/src/: Bike.cpp  CMakeLists.txt  Car.cpp  Vehicle.cpp
Cpp_OOPs/ShallowCopy/: CMakeLists.txt  main.cpp
Cpp_OOPs/Structure_Class/: CMakeLists.txt  main.cpp
Exception/CustomException/: CMakeLists.txt  main.cpp
Exception/LogicErrors/: CMakeLists.txt  main.cpp
Exception/Segmentation/: CMakeLists.txt  main.cpp
Exception/StackOverflow/: CMakeLists.txt  main.cpp
File_handling/: data.txt  file1  file1.cpp
Friend/FriendClass/: CMakeLists.txt  main.cpp
Friend/FriendFunction/: CMakeLists.txt  main.cpp
Keywords/: main.cpp
Keywords/CppKeywordsDemo/: CMakeLists.txt  main.cpp
Memory/New_Delete/: main.cpp
Memory/ShareWeakPtr/: CMakeLists.txt  main.cpp
Memory/SharedPtr/: CMakeLists.txt  main.cpp
Memory/UniquePtr/: CMakeLists.txt  main.cpp
Memory/WeakPtr/: CMakeLists.txt  main.cpp  weakptr_demo.cpp
Memory/simple/: main  main.cpp
Milestones/Milestone_1/: CMakeLists.txt  main.cpp
Milestones/Milestone_1/include/: Course.h  Department.h  Person.h  Student.h  Teacher.h
Milestones/Milestone_1/src/: Course.cpp  Department.cpp  Person.cpp  Student.cpp  Teacher.cpp
Milestones/SchoolManagement/: CMakeLists.txt  (+1 more)
Template/: CMakeLists.txt  main.cpp
Threads/: MultiThread1.cpp  Mutex1.cpp  t1
gTest/: CMakeLists.txt  coverage.info  main.cpp  run_coverage.sh
gTest/coverage_report/: index-sort-f.html  index-sort-l.html  index.html
gTest/coverage_report/src/: Calculator.cpp.func-c.html  Calculator.cpp.func.html  Calculator.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
gTest/include/: Calculator.hpp
gTest/src/: Calculator.cpp
gTest/test/: TestCalculator.cpp
gdb/: main  main.cpp
(+158 files in other folders)
